--- a/css/footer.css
+++ b/css/footer.css
@@ -1,22 +1,14 @@
-/**
-
-.generic-anchor {
-    color: #8DB9ED;
-  }
-  .generic-anchor:visited {
-    color: #8DB9ED;
-  }
-  .generic-anchor:hover {
-    color: #ccc;
-  }
-  
-  .flex-rw {
+.sociallogo {
+  color: #8DB9ED;
+}
+ 
+.flex-rw {
     display: flex;
     flex-flow: row wrap;
   }
 
 
-  footer {
+footer {
     background: #373737;
     margin-top: auto;
     width: 100%;
@@ -24,22 +16,25 @@
   }
   
   .footer-list-top {
-    width: 33.333%;
+    width: 50%;
   }
   
   .footer-list-top > li {
     text-align: center;
     padding-bottom: 10px;
+    list-style-type: none;
   }
   
   .footer-list-header {
     padding: 10px 0 5px 0;
     color: #fff;
-    font: 2.3vw "Oswald", sans-serif;
+    font-size: 20px; 
   }
   
   .footer-list-anchor {
     font: 1.3em "Open Sans", sans-serif;
+    color: #f4f4f4;
+    text-decoration: none;
   }
   
   .footer-social-section {
@@ -217,88 +212,3 @@
       font-size: 1.3em;
     }
   }
- ***/ 
-
- footer {
-    width: 100%;
-    display: inline-block;
-    margin: 2px 0;
-    height: 70px;
-    background-color: #272727;
-  }
-  footer .copyright {
-    width: 50%;
-    float: left;
-  }
-  @media (max-width: 600px) {
-    footer .copyright {
-      width: 100%;
-    }
-  }
-  footer .copyright p {
-    padding-left: 10%;
-    color: white;
-    font-size: 0.7em;
-    line-height: 70px;
-    text-transform: capitalize;
-    letter-spacing: 1px;
-  }
-  @media (max-width: 600px) {
-    footer .copyright p {
-      text-align: center;
-      padding: 0;
-    }
-  }
-  footer .social {
-    width: 50%;
-    float: right;
-  }
-  @media (max-width: 600px) {
-    footer .social {
-      width: 100%;
-    }
-  }
-  footer .social a {
-    float: left;
-    line-height: 70px;
-    text-decoration: none;
-    color: white;
-    text-align: center;
-    font-weight: bold;
-    -moz-transition: all, 0.3s;
-    -o-transition: all, 0.3s;
-    -webkit-transition: all, 0.3s;
-    transition: all, 0.3s;
-  }
-  footer .social a:hover {
-    background-color: #222;
-    -moz-transition: all, 0.3s;
-    -o-transition: all, 0.3s;
-    -webkit-transition: all, 0.3s;
-    transition: all, 0.3s;
-  }
-  
-  .linked {
-    background-color: #1E83AE;
-    font-size: 1.2em;
-    width: 20%;
-  }
-  
-  .face {
-    background-color: #3D5B94;
-    font-size: 1.2em;
-    width: 20%;
-  }
-  
-  .tweet {
-    background-color: #3DACDD;
-    font-size: 1.2em;
-    width: 20%;
-  }
-  
-  .support {
-    background-color: #6dcd9a;
-    font-size: 0.8em;
-    width: 40%;
-  }
-  
