--- a/css/footer.css
+++ b/css/footer.css
@@ -16,7 +16,7 @@ footer {
   }
   
   .footer-list-top {
-    width: 50%;
+    width: 45%;
   }
   
   .footer-list-top > li {
@@ -24,6 +24,7 @@ footer {
     padding-bottom: 10px;
     list-style-type: none;
   }
+
   
   .footer-list-header {
     padding: 10px 0 5px 0;
@@ -32,72 +33,28 @@ footer {
   }
   
   .footer-list-anchor {
-    font: 1.3em "Open Sans", sans-serif;
+    font-family: 'Open Sans Condensed', sans-serif;
     color: #f4f4f4;
     text-decoration: none;
   }
-  
-  .footer-social-section {
-    width: 100%;
-    align-items: center;
-    justify-content: space-around;
-    position: relative;
-    margin-top: 5px;
-  }
-  
-  .footer-social-section::after {
-    content: "";
-    position: absolute;
-    z-index: 1;
-    top: 50%;
-    left: 10px;
-    border-top: 1px solid #ccc;
-    width: calc(100% - 20px);
-  }
-  
-  .footer-social-overlap {
+.footer-social-overlap {
     position: relative;
     z-index: 2;
     background: #373737;
     padding: 0 20px;
-  }
-  
-  .footer-social-connect {
-    display: flex;
-    align-items: center;
-    font: 3.5em "Oswald", sans-serif;
-    color: #fff;
-  }
-  
-  .footer-social-small {
-    font-size: 0.6em;
-    padding: 0px 20px;
-  }
-  
-  .footer-social-overlap > a {
+}
+.footericonposition {
+  text-align: center;
+  padding: 0px 15px;
+  width: 50%;
+}
+.footer-social-overlap > a {
     font-size: 3em;
   }
   
   .footer-social-overlap > a:not(:first-child) {
     margin-left: 0.38em;
   }
-  
-  .footer-bottom-section {
-    width: 100%;
-    padding: 10px;
-    border-top: 1px solid #ccc;
-    margin-top: 10px;
-  }
-  
-  .footer-bottom-section > div:first-child {
-    margin-right: auto;
-  }
-  
-  .footer-bottom-wrapper {
-    font-size: 1.5em;
-    color: #fff;
-  }
-  
   .footer-address {
     display: inline;
     font-style: normal;
@@ -147,37 +104,21 @@ footer {
   
     .footer-social-section::after {
       top: 25%;
-    }
-  
-    .footer-social-connect {
-      margin-bottom: 10px;
-      padding: 0 10px;
-    }
-  
+    } 
     .footer-social-overlap {
       display: flex;
       justify-content: center;
+
     }
   
     .footer-social-icons-wrapper {
-      width: 100%;
+      width: 50%;
       padding: 0;
     }
   
     .footer-social-overlap > a:not(:first-child) {
       margin-left: 20px;
     }
-  
-    .footer-bottom-section {
-      padding: 0 5px 10px 5px;
-    }
-  
-    .footer-bottom-wrapper {
-      text-align: center;
-      width: 100%;
-      margin-top: 10px;
-    }
-  }
   @media only screen and (max-width: 480px) {
     .footer-social-overlap > a {
       margin: auto;
@@ -186,11 +127,6 @@ footer {
     .footer-social-overlap > a:not(:first-child) {
       margin-left: 0;
     }
-  
-    .footer-bottom-rights {
-      display: block;
-    }
-  }
   @media only screen and (max-width: 320px) {
     .footer-list-header {
       font-size: 2.2em;
@@ -207,8 +143,5 @@ footer {
     .footer-social-overlap > a {
       font-size: 2.24em;
     }
-  
-    .footer-bottom-wrapper {
-      font-size: 1.3em;
-    }
+
   }
