--- a/pages/style.css
+++ b/pages/style.css
@@ -13,7 +13,7 @@ body {
 .form {
 
 	width: 50%;
-	padding: 40px 10px;
+	padding: 30px 20px;
 	margin: 25px auto;
 	text-align: center;
 	background-color: #fff;
@@ -26,7 +26,7 @@ input {
 	font-family: 'Open Sans Condensed', sans-serif;
 
 }
-button {
+.loginbtn {
 	padding: 15px 50px;
 	color: #fff;
 	border-radius: 15px;
@@ -36,20 +36,43 @@ button {
 	cursor: pointer;
 
 }
-button:hover {
+.loginbtn:hover {
 	background-color: #861D06;
 	border-color: #861D06;
 	transition: 2s;
 }
 
-a {
-	float: right;
-	font-family: 'Roboto', sans-serif;
-	background-color: #DAF7A6;
-	text-align: right;
-	padding: 10px 10px;
-	position: absolute;
+.fam {
+	font: 12px arial;
+	position: inherit;
+	margin: 0px 5px;
+	margin-left: 20px;
+	padding: 10px;
+	padding-left: 50px;
+	float: left;
 	text-decoration: none;
+	color: #FF5733;
+	text-align: left;
+}
+.fa {
+	margin-left: 45px;
+}
+
+/****dfsdfgsdfg****/
+
+.closebtn {
+	padding: 5px 10px;
 	color: #fff;
+	font-size: 16px;
 	border: 1px solid #DAF7A6;
+	background-color: #DAF7A6;
+	font-family: 'Roboto', sans-serif;
+	cursor: pointer;
+
+}
+.close {
+	position: relative; 
+	text-align: right;
+	float: center;
+	display: block;
 }
