--- a/pages/signup/signup.css
+++ b/pages/signup/signup.css
@@ -91,8 +91,8 @@ button {
 	transition: 1s;
 }
 .bu-ba:hover {
-	background-color: #242424;
-	border-color: #242424;
+	background-color: #FF5733;
+	border-color: #FF5733;
 	color: #fff;
 	transition: 1s;
 
