--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
+::-webkit-scrollbar {
+      width: 8px;
+      background-color: grey;
+}  
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #ff5733;
+    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+}
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: #FFC300;
+    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+}
 
 html, body {
       margin: 0 auto;
@@ -15,6 +29,7 @@ header {
       height: 100vh;
       background: url(../img/bg.jpg) no-repeat 50% 50%;
       background-size: cover;
+      background-attachment: fixed;
 }
 
 .content {
@@ -26,7 +41,7 @@ header {
 }
 
 .logo {
-      line-height: 60px;
+      line-height: 50px;
       position: fixed;
       float: left;
       margin: 16px 46px;
@@ -62,7 +77,7 @@ nav.black ul {
 
 nav ul li {
       display: inline-block;
-      padding: 16px 40px;
+      padding: 10px 20px;
       text-transform: uppercase;
 }
 
@@ -102,7 +117,7 @@ nav ul li:nth-child(6) a:hover {
       transition: .5s;
 }
 nav ul li:nth-child(-n+4):hover {
-      border-bottom: 3px solid #DAF7A6 ;
+      border-bottom: 1.5px solid #DAF7A6 ;
       padding-top: 10px;
       padding-bottom: 10px;
       transition: all .5s;
