--- a/css/faq.css
+++ b/css/faq.css
@@ -176,3 +176,12 @@ caption {
     display: block; 
     background-color:#385BDD;
 }
+caption {
+    width: 100%;
+    position: absolute;
+    background-color: #33a8ff;
+    border-top: 3px solid #0167b3;
+    text-align: center;
+    padding: 15px 20px;
+    color: #fff;
+}
