--- a/css/faq.css
+++ b/css/faq.css
@@ -183,8 +183,9 @@ caption {
     color: #fff;
 }
 .question {
-    position: inherit;
+    position: relative;
     text-align: left;
     width: 100%;
     top: 50px;
+    margin-top: 50px;
 }
