--- a/css/faq.css
+++ b/css/faq.css
@@ -89,12 +89,14 @@ nav ul li:nth-child(5):hover {
     border-color: #C70039;
     transition: 1s;
     -webkit-animation: circle 1.5s ease-in forwards; 
+    -webkit-animation: circle 1.5s ease-in backwards;
 }
 nav ul li:nth-child(6):hover {
     background-color: #DAF7A6;
     border-color: #DAF7A6;
     transition: 1s;
     -webkit-animation: circle 1.5s ease-in forwards; 
+    -webkit-animation: circle 1.5s ease-in backwards;
 }
 nav ul li:nth-child(6) a:hover {
     color: #181818;
